Remove #if defined(XP_WIN) since it's redundant.  Bug 84584.